# WebAssemblyPTBachelor

./: .gitignore  README.md
calculation-wasm-build/: calculationAlgorithm.d.ts  calculationAlgorithm.js  calculationAlgorithm_bg.js  calculationAlgorithm_bg.wasm  calculationAlgorithm_bg.wasm.d.ts  package.json
hash-wasm-build/: hashAlgorithm.d.ts  hashAlgorithm.js  hashAlgorithm_bg.d.ts  hashAlgorithm_bg.js  hashAlgorithm_bg.wasm  package.json
parse-wasm-build/: wasm.d.ts  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
react-client/: ddd.js  package-lock.json  package.json  sortTemp.js
react-client/config/: webpack.config.js
react-client/public/: index.html
react-client/src/: App.css  App.js  showAlg
react-client/src/components/: additionComponent.js  barChart.js  cryptoComponent.js  parserComponent.js  sortComponent.js
react-client/src/cryptoAlgJs/: cryptoAlg.js
react-client/src/mathAlgorithm/: computationAlgorithm.js
react-client/src/parseAlgorithmJS/: parseAlg.js
react-client/src/service/: calculationServices.js
react-client/src/sortAlgorithmJs/: sortAlg.js
rustAlgorithms/calculationAlgorithm/: Cargo.toml
rustAlgorithms/calculationAlgorithm/src/: lib.rs
rustAlgorithms/hashAlgorithm/: Cargo.toml
rustAlgorithms/hashAlgorithm/src/: lib.rs
rustAlgorithms/parseAlgorithm/: Cargo.toml
rustAlgorithms/parseAlgorithm/src/: lib.rs
rustAlgorithms/sortAlgorithm/: Cargo.toml
rustAlgorithms/sortAlgorithm/src/: lib.rs
rustAlgorithms/wasm/: Cargo.toml
rustAlgorithms/wasm/src/: lib.rs
sort-wasm-build/: package.json  sortAlgorithm.d.ts  sortAlgorithm.js  sortAlgorithm_bg.d.ts  sortAlgorithm_bg.js  sortAlgorithm_bg.wasm  sortAlgorithm_bg.wasm.d.ts
wasm-build/: package.json  wasm_bg.wasm
