[package]
name = "calculationAlgorithm"
version = "0.1.0"
authors = ["antonimuller <antoni2793@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.34"
