[package]
name = "wasm"
version = "0.1.0"
authors = ["antonimuller <antoni2793@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.dev]
lto = true
opt-level = "z"

[dependencies]
wasm-bindgen = { version = "0.2.74" }


